oblig2patch/src/tests/oblig2/errors/return_contradicting_expression_fail.cmp
program return_contradicting_expression_fail
begin

    /* Error: Type of return stmt. differs from declared type. */
    proc main()
    begin
        in
        return 1234
    end
end